[gd_scene load_steps=11 format=3 uid="uid://k2k6nm3goxt7"]

[ext_resource type="PackedScene" uid="uid://40pvj01vaun1" path="res://Scenes/CombatScenes/combatScene.tscn" id="1_d6yyp"]
[ext_resource type="Script" path="res://Scripts/Combat/Path2D.gd" id="2_1wosj"]
[ext_resource type="Script" path="res://Scenes/CombatScenes/secret_boss_combat.gd" id="2_04q6l"]
[ext_resource type="PackedScene" uid="uid://0cr7bpouj6h1" path="res://Scenes/CombatScenes/secret_boss_enemy.tscn" id="3_a8duf"]
[ext_resource type="AudioStream" uid="uid://ngacnw0ck2u7" path="res://Assets/Audio/explosion.wav" id="5_nlpgi"]
[ext_resource type="AudioStream" uid="uid://b2aw7girwpbhx" path="res://Assets/Audio/synth.wav" id="6_8ylv3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8yjn"]
bg_color = Color(0.580392, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Curve2D" id="Curve2D_34cyu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 210, 256, 0, 0, 0, 0, 954, 256)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_kqh2d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 127.142, 153, 0, 0, 0, 0, 1025.01, 151)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_hvu4u"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 114, 335, 0, 0, 0, 0, 114, 604)
}
point_count = 2

[node name="Node2D" instance=ExtResource("1_d6yyp")]
script = ExtResource("2_04q6l")

[node name="ObjectiveLabel" parent="UI" index="4"]
offset_top = -41.0
offset_right = 540.0
offset_bottom = 1.0
text = "Ð̷̡̫̙̦̣̇̈́͑̉̃ê̴̛̪͈̖̬̳̄̐͐̏£̶̤̖̰̯̝͋͂̽̎̐ê̶̦̪̘̗̂̇͌́̋ͅå̴̢̗̤̲̹͆̐͋͑͠†̸̢̤̩̠͕͆̎̔͌͝ ̶͍̯̥̹̌͐̍͌͂ͅ†̶̛͔̼̬͓̹̍̏́͘ê̷͙̝͓̹͕̈́͆̍̓͘r̵̢̙̠̣̥̈́̈̀̌̑r̴̢̙͇̰̗̐͛͊̂̇¥̵̠̣̹͕̼͒̎́̍̕"

[node name="BossHp" type="ProgressBar" parent="UI" index="5"]
layout_mode = 0
offset_left = 568.0
offset_top = 55.0
offset_right = 834.0
offset_bottom = 82.0
scale = Vector2(1, 0.989967)
theme_override_styles/fill = SubResource("StyleBoxFlat_p8yjn")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="UI/BossHp" index="0"]
visible = false
layout_mode = 0
offset_right = 266.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Basic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" parent="." index="8"]
visible = false

[node name="Path2D" type="Path2D" parent="." index="10"]
curve = SubResource("Curve2D_34cyu")
script = ExtResource("2_1wosj")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" index="0"]
position = Vector2(954, 256)
progress = 752.0

[node name="miniEnemy" parent="Path2D/PathFollow2D" index="0" instance=ExtResource("3_a8duf")]
scale = Vector2(1.5, 1.5)

[node name="BoulderPath" type="Path2D" parent="." index="11"]
position = Vector2(5.54772, 0)
scale = Vector2(0.994577, 1)
curve = SubResource("Curve2D_kqh2d")

[node name="BoulderSpawner" type="PathFollow2D" parent="BoulderPath" index="0"]
position = Vector2(127.142, 153)
rotation = -0.0022275

[node name="GasPath" type="Path2D" parent="." index="12"]
curve = SubResource("Curve2D_hvu4u")

[node name="PathFollow2D" type="PathFollow2D" parent="GasPath" index="0"]
position = Vector2(114, 335)
rotation = 1.5708

[node name="GasSpawn" type="Marker2D" parent="GasPath/PathFollow2D" index="0"]
position = Vector2(-2, -1)
rotation = -1.57428

[node name="BoulderTimer" type="Timer" parent="." index="13"]
wait_time = 0.5

[node name="GasTimer" type="Timer" parent="." index="14"]

[node name="BoulderEffect" type="AudioStreamPlayer2D" parent="." index="15"]
stream = ExtResource("5_nlpgi")
volume_db = -15.0

[node name="GasEffect" type="AudioStreamPlayer2D" parent="." index="16"]
stream = ExtResource("6_8ylv3")
volume_db = 8.0

[connection signal="timeout" from="BoulderTimer" to="." method="_on_boulder_timer_timeout"]
[connection signal="timeout" from="GasTimer" to="." method="_on_gas_timer_timeout"]
